--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "sanitize-filename": "^1.6.3",
     "sharp": "^0.31.2"
   },
   "devDependencies": {
