--- a/deploy/nginx/nginx.conf
+++ b/deploy/nginx/nginx.conf
@@ -1,16 +1,18 @@
-upstream app_server {
-    server 0.0.0.0:8000 fail_timeout=0;
-}
+# nginx/nginx.conf
 
-server {
-    listen 80;
-    server_name _;
+events {}
 
-    location / {
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_pass http://app_server;
+http {
+    server {
+        listen 80;
+
+        location / {
+            proxy_pass http://localhost:8000; # Express app port
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
     }
 }
